# sqs-poller

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml  run-unit-tests.yml
src/sqs_poller/: SQSPoller.py  __init__.py  sqs_poller.py
tests/: conftest.py  test_sqs_poller.py
