[metadata]
name = sqs-poller
version = 0.0.1
author = Ville Lindroos
author_email = ville.lindroos@nordhealth.com
description = A wrapper class around boto3's SQS resource.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nordhealth/sqs-poller
project_urls =
    Nordhealth = https://nordhealth.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7
install_requires =
    boto3 == 1.17.80

[options.packages.find]
where = src
